# Valentinator

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ParameterLayout.cpp  ParameterLayout.h  PitchWobble.cpp  PitchWobble.h  UnderwaterChain.cpp  UnderwaterChain.h
Source/GUI/: MarineLookAndFeel.cpp  MarineLookAndFeel.h  OceanBackground.cpp  OceanBackground.h
